--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>New collection and modern design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="images/pro2.jpg" alt="">
+                <img src="pro2.jpg" alt="">
                 <div class="des">
                     <span>Adidas</span>
                     <h5>Flare Vintage sweater</h5>
